BuildHughes/translation-tool/inputs/source_meta/objects/HSvc_SpecialInstructions__c.object
<CustomObject>
    <fields>
        <fullName>HSvc_Problem_Type__c</fullName>
        <label>Problem Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Service Component</fullName>
                </value>
                <value>
                    <fullName>Facilities</fullName>
                </value>
                <value>
                    <fullName>Weather</fullName>
                </value>
                <value>
                    <fullName>Performance</fullName>
                </value>
                <value>
                    <fullName>AWR/RMA</fullName>
                </value>
                <value>
                    <fullName>Acct Deletion</fullName>
                </value>
                <value>
                    <fullName>Beta</fullName>
                </value>
                <value>
                    <fullName>Hot Field Issue</fullName>
                </value>
                <value>
                    <fullName>Master</fullName>
                </value>
                <value>
                    <fullName>Mgd Sec Svcs</fullName>
                </value>
                <value>
                    <fullName>Pin Reset</fullName>
                </value>
                <value>
                    <fullName>Problem</fullName>
                </value>
                <value>
                    <fullName>Project</fullName>
                </value>
                <value>
                    <fullName>RF Ded,Natl,Shr</fullName>
                </value>
                <value>
                    <fullName>RFT Dedicated</fullName>
                </value>
                <value>
                    <fullName>RFT Natl NW</fullName>
                </value>
                <value>
                    <fullName>RFT Shared</fullName>
                </value>
                <value>
                    <fullName>Replace KeyFob</fullName>
                </value>
                <value>
                    <fullName>Req - VOD</fullName>
                </value>
                <value>
                    <fullName>Req- New Key Fob</fullName>
                </value>
                <value>
                    <fullName>Request</fullName>
                </value>
                <value>
                    <fullName>Request - SSID</fullName>
                </value>
                <value>
                    <fullName>Rqst -Live Broadcast</fullName>
                </value>
                <value>
                    <fullName>Service Call</fullName>
                </value>
                <value>
                    <fullName>Site Change</fullName>
                </value>
                <value>
                    <fullName>Tracking</fullName>
                </value>
                <value>
                    <fullName>Troubleshooting</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HSvc_ProductGrouping__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is a lookup to Product_Grouping__c</description>
        <label>Product Grouping</label>
        <referenceTo>Product_Grouping__c</referenceTo>
        <relationshipName>Special_Instructions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HSvc_Product__c</fullName>
        <label>Product</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_Provider__c</fullName>
        <label>Provider</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NAP</fullName>
                </value>
                <value>
                    <fullName>Hughes SP</fullName>
                </value>
                <value>
                    <fullName>ABC</fullName>
                </value>
                <value>
                    <fullName>XYZ</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HSvc_QueueId__c</fullName>
        <label>QueueId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_RF_Related__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RF Related</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HSvc_Reason_for_Change__c</fullName>
        <label>Reason for Change</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Correct Network Event</fullName>
                </value>
                <value>
                    <fullName>Customer Requested</fullName>
                </value>
                <value>
                    <fullName>Enable New Feature</fullName>
                </value>
                <value>
                    <fullName>Infrastructure</fullName>
                </value>
                <value>
                    <fullName>Install/Remove HW</fullName>
                </value>
                <value>
                    <fullName>New Customer Rollout</fullName>
                </value>
                <value>
                    <fullName>PM</fullName>
                </value>
                <value>
                    <fullName>Product Launch</fullName>
                </value>
                <value>
                    <fullName>Security/PCI Compliance</fullName>
                </value>
                <value>
                    <fullName>Service Management</fullName>
                </value>
                <value>
                    <fullName>Upgrade Hardware</fullName>
                </value>
                <value>
                    <fullName>Upgrade Software</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HSvc_Reason_for_failure__c</fullName>
        <label>Reason for failure</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Defect escaped test</fullName>
                </value>
                <value>
                    <fullName>Incorrect configuration</fullName>
                </value>
                <value>
                    <fullName>Hardware failure</fullName>
                </value>
                <value>
                    <fullName>Root cause unknown</fullName>
                </value>
                <value>
                    <fullName>Human Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HSvc_Recalculate_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Recalculate Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HSvc_Recommended_Next_Steps__c</fullName>
        <label>Recommended Next Steps</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>HSvc_CaseRecordType__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Abort</fullName>
                </value>
                <value>
                    <fullName>Account Transaction</fullName>
                </value>
                <value>
                    <fullName>Advanced Warranty Replacement</fullName>
                </value>
                <value>
                    <fullName>Continue Install</fullName>
                </value>
                <value>
                    <fullName>Corrected Configuration</fullName>
                </value>
                <value>
                    <fullName>Corrected Connections</fullName>
                </value>
                <value>
                    <fullName>Customer to replace cables</fullName>
                </value>
                <value>
                    <fullName>Customer Will Configure</fullName>
                </value>
                <value>
                    <fullName>Customer Will Correct</fullName>
                </value>
                <value>
                    <fullName>Dispatch</fullName>
                </value>
                <value>
                    <fullName>Dispatch Tech</fullName>
                </value>
                <value>
                    <fullName>Escalate</fullName>
                </value>
                <value>
                    <fullName>Escalated</fullName>
                </value>
                <value>
                    <fullName>Escalate to DM</fullName>
                </value>
                <value>
                    <fullName>Escalate to NAP</fullName>
                </value>
                <value>
                    <fullName>Expedited TR</fullName>
                </value>
                <value>
                    <fullName>Follow-up</fullName>
                </value>
                <value>
                    <fullName>Hughes Truck Roll</fullName>
                </value>
                <value>
                    <fullName>Inform customer</fullName>
                </value>
                <value>
                    <fullName>Monitoring</fullName>
                </value>
                <value>
                    <fullName>NAP Office Only</fullName>
                </value>
                <value>
                    <fullName>NAP Truck Roll</fullName>
                </value>
                <value>
                    <fullName>None Required</fullName>
                </value>
                <value>
                    <fullName>Other (Explain in Notes)</fullName>
                </value>
                <value>
                    <fullName>Partner RMA</fullName>
                </value>
                <value>
                    <fullName>Pass</fullName>
                </value>
                <value>
                    <fullName>PIP</fullName>
                </value>
                <value>
                    <fullName>Priority TR</fullName>
                </value>
                <value>
                    <fullName>Provisioning</fullName>
                </value>
                <value>
                    <fullName>PSR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HSvc_Related_Activities__c</fullName>
        <label>Related Activities</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>HSvc_CaseSubtype__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>RF work</fullName>
                </value>
                <value>
                    <fullName>Power work</fullName>
                </value>
                <value>
                    <fullName>Port Turn up</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HSvc_Release_Plan__c</fullName>
        <label>Release Plan</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_Release_reported_in__c</fullName>
        <label>Release reported in</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_ResolutionCodeRule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Resolution Code</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>HSvc_ResolutionCodeRule__c.CaseRecordType__c</field>
                <operation>equals</operation>
                <valueField>$Source.HSvc_CaseRecordType__c</valueField>
            </filterItems>
            <filterItems>
                <field>HSvc_ResolutionCodeRule__c.HSvc_Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>HSvc_ResolutionCodeRule__c</referenceTo>
        <relationshipName>Customer_Notes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HSvc_ResolutionCode__c</fullName>
        <label>Resolution Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sample</fullName>
                </value>
                <value>
                    <fullName>TNF – Cancelled Service</fullName>
                </value>
                <value>
                    <fullName>TNF – Customer Accepted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HSvc_Risk__c</fullName>
        <label>Risk</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HSvc_Rollback_Plan__c</fullName>
        <label>Rollback Plan</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>HSvc_Root_Cause__c</fullName>
        <label>Root Cause</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Outside NAD Control</fullName>
                </value>
                <value>
                    <fullName>Human Error</fullName>
                </value>
                <value>
                    <fullName>Unknown Up/Downstream Configuration</fullName>
                </value>
                <value>
                    <fullName>Incorrect Implementation Plan</fullName>
                </value>
                <value>
                    <fullName>Power, Water, Fire, Other</fullName>
                </value>
                <value>
                    <fullName>Defective Component, Defective Software</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HSvc_SPR_Number__c</fullName>
        <label>SPR Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_Sales_Channel__c</fullName>
        <label>Sales Channel</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_Sales_Source__c</fullName>
        <label>Sales Source</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_Self_Service_Commented__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Self-Service Commented</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HSvc_Send_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HSvc_Service_Provider_Group__c</fullName>
        <label>Service Provider Group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>QXS</fullName>
                </value>
                <value>
                    <fullName>ZCVD</fullName>
                </value>
                <value>
                    <fullName>ANS</fullName>
                </value>
                <value>
                    <fullName>ANTFI</fullName>
                </value>
                <value>
                    <fullName>ASTRACOM</fullName>
                </value>
                <value>
                    <fullName>AVIEU</fullName>
                </value>
                <value>
                    <fullName>BANHU</fullName>
                </value>
                <value>
                    <fullName>DENEU</fullName>
                </value>
                <value>
                    <fullName>DIGEUSP</fullName>
                </value>
                <value>
                    <fullName>VSD</fullName>
                </value>
                <value>
                    <fullName>TELSAT</fullName>
                </value>
                <value>
                    <fullName>PANA</fullName>
                </value>
                <value>
                    <fullName>PTPO</fullName>
                </value>
                <value>
                    <fullName>GETCH</fullName>
                </value>
                <value>
                    <fullName>GETPO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HSvc_Service_Provider__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Provider</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Special_Instructions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HSvc_Service_Type__c</fullName>
        <label>Service Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>JUPITER 1</fullName>
                </value>
                <value>
                    <fullName>SPACEWAY 3</fullName>
                </value>
                <value>
                    <fullName>KU</fullName>
                </value>
                <value>
                    <fullName>Terrestrial</fullName>
                </value>
                <value>
                    <fullName>PES</fullName>
                </value>
                <value>
                    <fullName>Business Systems</fullName>
                </value>
                <value>
                    <fullName>Management</fullName>
                </value>
                <value>
                    <fullName>VoIP</fullName>
                </value>
                <value>
                    <fullName>Video</fullName>
                </value>
                <value>
                    <fullName>Managed Services</fullName>
                </value>
                <value>
                    <fullName>JUP/SW</fullName>
                </value>
                <value>
                    <fullName>Internet/Backhaul</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HSvc_Services_Lost__c</fullName>
        <label>% Services Lost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>HSvc_Severity__c</fullName>
        <label>Severity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Critical</fullName>
                </value>
                <value>
                    <fullName>Major</fullName>
                </value>
                <value>
                    <fullName>Moderate</fullName>
                </value>
                <value>
                    <fullName>Tech Question</fullName>
                </value>
                <value>
                    <fullName>Minor</fullName>
                </value>
                <value>
                    <fullName>6-AWR/RMA</fullName>
                </value>
                <value>
                    <fullName>Enhancement</fullName>
                </value>
                <value>
                    <fullName>8-Software</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HSvc_Shift_Supervisor_Email_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Shift Supervisor Email Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HSvc_Source__c</fullName>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>EM7</fullName>
                </value>
                <value>
                    <fullName>SMARTS</fullName>
                </value>
                <value>
                    <fullName>HNMon</fullName>
                </value>
                <value>
                    <fullName>CS Escalation/Trend</fullName>
                </value>
                <value>
                    <fullName>Monitoring</fullName>
                </value>
                <value>
                    <fullName>Customer Call</fullName>
                </value>
                <value>
                    <fullName>Internal Call</fullName>
                </value>
                <value>
                    <fullName>AGO</fullName>
                </value>
                <value>
                    <fullName>BBB</fullName>
                </value>
                <value>
                    <fullName>Bulk Upload</fullName>
                </value>
                <value>
                    <fullName>CES</fullName>
                </value>
                <value>
                    <fullName>Chat</fullName>
                </value>
                <value>
                    <fullName>Corp Officer</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>FCC</fullName>
                </value>
                <value>
                    <fullName>Fax</fullName>
                </value>
                <value>
                    <fullName>IVR</fullName>
                </value>
                <value>
                    <fullName>Letter</fullName>
                </value>
                <value>
                    <fullName>Mobile Native</fullName>
                </value>
                <value>
                    <fullName>Mobile Web</fullName>
                </value>
                <value>
                    <fullName>NOC</fullName>
                </value>
                <value>
                    <fullName>Other Agency</fullName>
                </value>
                <value>
                    <fullName>PAM</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>QA Tool</fullName>
                </value>
                <value>
                    <fullName>SCF Alarm</fullName>
                </value>
                <value>
                    <fullName>SCS</fullName>
                </value>
                <value>
                    <fullName>Self-Service</fullName>
                </value>
                <value>
                    <fullName>Smarts Alarm</fullName>
                </value>
                <value>
                    <fullName>Vantive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HSvc_Summary__c</fullName>
        <label>Summary</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>HSvc_SuspectedAsset__c</fullName>
        <label>Product Grouping</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>General</fullName>
                </value>
                <value>
                    <fullName>Satellite Broadband</fullName>
                </value>
                <value>
                    <fullName>Customer Tools</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HSvc_T_M_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>T&amp;M Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HSvc_Test_Bed_Name__c</fullName>
        <label>Test Bed Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_Test_Number__c</fullName>
        <label>Test Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_Validation_Plan__c</fullName>
        <label>Validation Plan</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>HSvc_Verifier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Verifier</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Verifier_spi</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HardDecline__c</fullName>
        <label>Billing Hard Decline</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>True</fullName>
                </value>
                <value>
                    <fullName>False</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hsvc_Account_Company_ID__c</fullName>
        <description>Field to save account company ID of account.</description>
        <label>Account Company ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hsvc_Activities_Affected__c</fullName>
        <label>Activities Affected</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Commissioning/Activation</fullName>
                </value>
                <value>
                    <fullName>Customer Gateway/Web</fullName>
                </value>
                <value>
                    <fullName>Management</fullName>
                </value>
                <value>
                    <fullName>Ordering</fullName>
                </value>
                <value>
                    <fullName>Provisioning</fullName>
                </value>
                <value>
                    <fullName>Reports/Data</fullName>
                </value>
                <value>
                    <fullName>Tools</fullName>
                </value>
                <value>
                    <fullName>Transport</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hsvc_Area__c</fullName>
        <label>Area</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account/ Contract Related</fullName>
                </value>
                <value>
                    <fullName>Compensation</fullName>
                </value>
                <value>
                    <fullName>Installation</fullName>
                </value>
                <value>
                    <fullName>Marketing Campaigns</fullName>
                </value>
                <value>
                    <fullName>Marketing Collateral</fullName>
                </value>
                <value>
                    <fullName>Marketing Communications</fullName>
                </value>
                <value>
                    <fullName>Marketing Events</fullName>
                </value>
                <value>
                    <fullName>Marketing Incentives</fullName>
                </value>
                <value>
                    <fullName>Marketing Offers</fullName>
                </value>
                <value>
                    <fullName>Marketing Programs</fullName>
                </value>
                <value>
                    <fullName>Order Support</fullName>
                </value>
                <value>
                    <fullName>Quality</fullName>
                </value>
                <value>
                    <fullName>System Access/Account Password Reset</fullName>
                </value>
                <value>
                    <fullName>Tools &amp; Systems</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hsvc_Assets__c</fullName>
        <label>Assets</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Hsvc_BeamId__c</fullName>
        <label>Beam Id</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Hsvc_Case_Reassign_Multiselect__c</fullName>
        <description>Case reassign multiselect picklist for red text messages.</description>
        <label>Case Re-assign</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>TP Monterrey MOD</fullName>
                </value>
                <value>
                    <fullName>TP Monterrey Universal</fullName>
                </value>               
                <value>
                    <fullName>SDG Colombia</fullName>
                </value>
                <value>
                    <fullName>South America Control Center</fullName>
                </value>
                <value>
                    <fullName>Hughes Colombia Distributor</fullName>
                </value>                
                <value>
                    <fullName>Hughes Panama Distributor</fullName>
                </value>
                <value>
                    <fullName>SDG Panama</fullName>
                </value>
                <value>
                    <fullName>TP Monterrey MOD Panama</fullName>
                </value>
				<value>
                    <fullName>Hughes de Colombia</fullName>
                </value>
                <value>
                    <fullName>Hughes de Panama</fullName>
                </value>
                <value>
                    <fullName>Hughes de Peru</fullName>
                </value>
                <value>
                    <fullName>Hughes de Ecuador</fullName>
                </value>
                <value>
                    <fullName>Hughes de Chile</fullName>
                </value>
                <value>
                    <fullName>Hughes de Corporate (HQ)</fullName>
                </value>
				<value>
                    <fullName>Ent SA Frontline</fullName>
                </value>
                <value>
                    <fullName>Ent SA Field Support</fullName>
                </value>
                <value>
                    <fullName>Ent SA Control Desk</fullName>
                </value>
                <value>
                    <fullName>Ent SA Business Analyst</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hsvc_Case_Status_MultiSelect__c</fullName>
        <description>This is the case status multiselect picklist for red text message recordtype.</description>
        <label>Case Status</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Escalated</fullName>
                </value>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Open - Dispatch</fullName>
                </value>
                <value>
                    <fullName>Open - Escalated</fullName>
                </value>
                <value>
                    <fullName>Open - Holding for Parts</fullName>
                </value>
                <value>
                    <fullName>Open - In Progress</fullName>
                </value>
                <value>
                    <fullName>Open - Investigating</fullName>
                </value>
                <value>
                    <fullName>Open - On Site</fullName>
                </value>
                <value>
                    <fullName>Open - PAM Case</fullName>
                </value>
                <value>
                    <fullName>Open - Provisioning Processing</fullName>
                </value>
                <value>
                    <fullName>Open PSR</fullName>
                </value>
                <value>
                    <fullName>Open - RMA</fullName>
                </value>
                <value>
                    <fullName>Open - Troubleshooting</fullName>
                </value>
                <value>
                    <fullName>Open - Upgrade</fullName>
                </value>
                <value>
                    <fullName>Open - Web Case</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Pending - Callback</fullName>
                </value>
                <value>
                    <fullName>Pending - Cancel</fullName>
                </value>
                <value>
                    <fullName>Pending - Construction</fullName>
                </value>
                <value>
                    <fullName>Pending - Customer Confirmation</fullName>
                </value>
                <value>
                    <fullName>Pending - Customer Contact</fullName>
                </value>
                <value>
                    <fullName>Pending - Customer Input</fullName>
                </value>
                <value>
                    <fullName>Pending - Engineering Action</fullName>
                </value>
                <value>
                    <fullName>Pending - Install</fullName>
                </value>
                <value>
                    <fullName>Pending - Monitoring</fullName>
                </value>
                <value>
                    <fullName>Pending - NAP</fullName>
                </value>
                <value>
                    <fullName>Pending Post Install Provisioning</fullName>
                </value>
                <value>
                    <fullName>Pending - Provisioning Group</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hsvc_City__c</fullName>
        <label>City</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>